--- a/public/Index.html
+++ b/public/Index.html
@@ -4,11 +4,18 @@
     <title>
         Pokemon Assignment for Comp 2537
     </title>
+
+    <meta charset="UTF-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="myscripts.js"></script>
-    <script src="index.js"></script>
+    <script src="./myscripts.js"></script>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
+    <nav>
+
+    </nav>
     <main>
 
     </main>
