--- a/Assignment 1/public/Index.html
+++ b/Assignment 1/public/Index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <nav>
-        <div class="type_filter">
+    <nav id="filter">
+        <div id="type_filter" class="filter_div">
             <select name="pokemon_type" id="pokemon_type">
                 <option value="grass">grass</option>
                 <option value="dark">dark</option>
@@ -38,7 +38,7 @@
             </select>
         </div>
 
-        <div class="region_filter">
+        <div id="region_filter" class="filter_div">
             <select name="region" id="region">
                 <option value="Kanto">Kanto</option>
                 <option value="Johto">Johto</option>
@@ -51,7 +51,7 @@
             </select>
         </div>
 
-        <div class="generation_filter">
+        <div id="generation_filter" class="filter_div">
             <select name="generation" id="generation">
                 <option value="generation-i">generation-i</option>
                 <option value="generation-ii">generation-ii</option>
@@ -64,7 +64,7 @@
             </select>
         </div>
 
-        <div class="habitat_filter">
+        <div id="habitat_filter" class="filter_div">
             <select name="habitat" id="habitat">
                 <option value="grassland">grassland</option>
                 <option value="forest">forest</option>
