added placeholders for filter choices

--- a/Assignment 1/public/Index.html
+++ b/Assignment 1/public/Index.html
@@ -17,6 +17,7 @@
     <nav id="filter">
         <div id="type_filter" class="filter_div">
             <select name="pokemon_type" id="pokemon_type">
+                <option value="" disabled selected hidden>Type</option>
                 <option value="grass">grass</option>
                 <option value="dark">dark</option>
                 <option value="dragon">dragon</option>
@@ -40,6 +41,7 @@
 
         <div id="region_filter" class="filter_div">
             <select name="region" id="region">
+                <option value="" disabled selected hidden>Region</option>
                 <option value="Kanto">Kanto</option>
                 <option value="Johto">Johto</option>
                 <option value="Hoenn">Hoenn</option>
@@ -53,6 +55,7 @@
 
         <div id="generation_filter" class="filter_div">
             <select name="generation" id="generation">
+                <option value="" disabled selected hidden>Generation</option>
                 <option value="generation-i">generation-i</option>
                 <option value="generation-ii">generation-ii</option>
                 <option value="generation-iii">generation-iii</option>
@@ -66,6 +69,7 @@
 
         <div id="habitat_filter" class="filter_div">
             <select name="habitat" id="habitat">
+                <option value="" disabled selected hidden>Habitat</option>
                 <option value="grassland">grassland</option>
                 <option value="forest">forest</option>
                 <option value="waters-edge">waters-edge</option>
