added increase hits and delete portions to timeline

--- a/Assignment 2/public/timeline.html
+++ b/Assignment 2/public/timeline.html
@@ -10,6 +10,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./timeline.js"></script>
+    <link rel="stylesheet" href="./timeline.css">
 </head>
 
 <body>
